@@ -1,3 +1,7 @@
+2023-06-27 
+    - Adding mocha tests
+    - Breaking change: policy/Executor.ts/executePolicies now returns Promise<IPolicyExecution[]>
+  
 2023-06-08 0.3.2
     - Bumping up eye version
   
